--- a/header.html
+++ b/header.html
@@ -1192,7 +1192,7 @@
           <li class="activo">✔ Genera Sesiones e Instrumentos de Evaluación</li>
           <li class="activo">✔ Soporte técnico </li>
         </ul>
-        <p style="font-size: 0.8rem; color: #b5b0c9">Paga en cuotas sin intereses</p>
+        <p style="font-size: 0.8rem; color: #b5b0c9;">Paga en cuotas sin intereses</p>
         <button onclick="window.location.href='https://cuadernos.ai/login';" style="margin-top: -5px; background-color: #6c5dd3; color: white; padding: 12px; width: 100%; border: none; border-radius: 6px; font-weight: bold; font-size: 1rem; cursor: pointer;">
           Suscríbete a Premium
         </button>
@@ -1232,10 +1232,10 @@
         <div
           style="position: absolute; top: -12px; left: 20px; background-color: #3e3f4a; color: white; padding: 5px 10px; border-radius: 20px; font-size: 0.75rem;">
           El Más Popular</div>
-        <h2 style="margin-top: 20px; font-size: 1.5rem;">Plan Premium</h2>
-        <p style="font-size: 1.3rem; font-weight: bold; margin: 0;">🇵🇪 S/20 mensual</p>
-        <p style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">🇵🇪 S/150 anual</p>
-        <p style="font-size: 0.9rem; color: #c8c3e6;">Para instituciones educativas</p>
+        <h2 style="margin-top: 20px; font-size: 1.5rem;">Plan Institucional</h2>
+        <p style="font-size: 1.3rem; font-weight: bold; margin: 0;">🇵🇪 S/40 mensual</p>
+        <p style="font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">🇵🇪 S/200 anual</p>
+        <p style="font-size: 0.9rem; color: #c8c3e6;">Para grupos e instituciones educativas</p>
         <ul style="list-style: none; padding: 0; font-size: 0.88rem;">
           <li class="activo">✔ Acceso de administrador</li>
           <li class="activo">✔ Acceso total a herramientas Pro y Plus</li>
@@ -1250,7 +1250,7 @@
             alt="Asistente IA"
             style="max-width: 20%; height: auto; border-radius: 10px; position: absolute; top: 85%; right: 5px; transform: translateY(-50%);">
         <button onclick="window.location.href='https://cuadernos.ai/login';" style="margin-top: -5px; background-color: #6c5dd3; color: white; padding: 12px; width: 100%; border: none; border-radius: 6px; font-weight: bold; font-size: 1rem; cursor: pointer;">
-          Suscríbete a Premium
+          Suscríbete a plus
         </button>
       </div>
 
